src/objects/Opsera_Management__c/Opsera_Management__c.object-meta.xml
<CustomObject>
    <label>Opsera Management</label>
    <nameField>
        <label>Opsera Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opsera Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>