src/objects/Opsera_Management__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <type>TextArea</type>
</CustomField>