src/objects/Opsera_Management__c/fields/Run_Count__c.field-meta.xml
<CustomField>
    <fullName>Run_Count__c</fullName>
    <label>Run Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>